--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"angular-function-plot-template": {
+		"optical-informatics-labs": {
 			"projectType": "application",
 			"schematics": {
 				"@schematics/angular:component": {
@@ -41,7 +41,7 @@
 				"build": {
 					"builder": "@angular-devkit/build-angular:browser",
 					"options": {
-						"outputPath": "dist/angular-function-plot-template",
+						"outputPath": "dist/optical-informatics-labs",
 						"index": "src/index.html",
 						"main": "src/main.ts",
 						"polyfills": "src/polyfills.ts",
@@ -49,13 +49,19 @@
 						"aot": true,
 						"assets": [
 							"src/favicon.ico",
-							"src/assets"
+							"src/assets",
+							"src/app/lab1/README.md"
 						],
 						"styles": [
-							"./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-							"src/styles.less"
+							"node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+							"src/styles.less",
+							"node_modules/prismjs/themes/prism-okaidia.css",
+							"node_modules/prismjs/plugins/line-highlight/prism-line-highlight.css"
 						],
-						"scripts": []
+						"scripts": [
+							"node_modules/marked/lib/marked.js",
+							"node_modules/prismjs/prism.js"
+						]
 					},
 					"configurations": {
 						"production": {
@@ -91,22 +97,22 @@
 				"serve": {
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"options": {
-						"browserTarget": "angular-function-plot-template:build"
+						"browserTarget": "optical-informatics-labs:build"
 					},
 					"configurations": {
 						"production": {
-							"browserTarget": "angular-function-plot-template:production"
+							"browserTarget": "optical-informatics-labs:production"
 						}
 					}
 				},
 				"extract-i18n": {
 					"builder": "@angular-devkit/build-angular:extract-i18n",
 					"options": {
-						"browserTarget": "angular-function-plot-template:build"
+						"browserTarget": "optical-informatics-labs:build"
 					}
 				}
 			}
 		}
 	},
-	"defaultProject": "angular-function-plot-template"
+	"defaultProject": "optical-informatics-labs"
 }
