--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/mathjs": "^6.0.5",
     "codelyzer": "^6.0.0",
     "mathjs": "^7.3.0",
+    "ngx-markdown": "^10.1.1",
     "plotly.js-dist": "^1.56.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
